@@ -69,27 +69,20 @@ def server_version(host, port):
         raise
 
 
-def login(username, password, host, port, database):
+def login(host, port, database, username, parameters, language=None):
     global CONNECTION, _USER, _USERNAME, _HOST, _PORT, _DATABASE
     global _VIEW_CACHE, _TOOLBAR_CACHE, _KEYWORD_CACHE
     _VIEW_CACHE = {}
     _TOOLBAR_CACHE = {}
     _KEYWORD_CACHE = {}
-    try:
-        if CONNECTION is not None:
-            CONNECTION.close()
-        CONNECTION = ServerPool(host, port, database)
-        logging.getLogger(__name__).info('common.db.login(%s, %s)' %
-            (username, 'x' * 10))
-        with CONNECTION() as conn:
-            result = conn.common.db.login(username, password)
-        logging.getLogger(__name__).debug(repr(result))
-    except socket.error:
-        _USER = None
-        return -1
-    if not result:
-        _USER = None
-        return -2
+    if CONNECTION is not None:
+        CONNECTION.close()
+    CONNECTION = ServerPool(host, port, database)
+    logging.getLogger(__name__).info('common.db.login(%s, %s, %s)'
+        % (username, 'x' * 10, language))
+    with CONNECTION() as conn:
+        result = conn.common.db.login(username, parameters, language)
+    logging.getLogger(__name__).debug(repr(result))
     _USER = result[0]
     _USERNAME = username
     session = ':'.join(map(str, [username] + result))
@@ -98,7 +91,6 @@ def login(username, password, host, port, database):
     _PORT = port
     _DATABASE = database
     IPCServer(host, port, database).run()
-    return 1
 
 
 def logout():
